--- a/astir-lexer/astir-lexer.vcxproj.filters
+++ b/astir-lexer/astir-lexer.vcxproj.filters
@@ -32,7 +32,7 @@
     <None Include="Grammar.apar">
       <Filter>Resource Files</Filter>
     </None>
-    <None Include="ExampleFile.alex">
+    <None Include="ExampleFile.astir">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
