Semantic analyzer restructured and made more consistent

--- a/astir-lexer/astir-lexer.vcxproj
+++ b/astir-lexer/astir-lexer.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Parser.cpp" />
     <ClCompile Include="Specification.cpp" />
+    <ClCompile Include="SpecificationFile.cpp" />
     <ClCompile Include="Token.cpp" />
   </ItemGroup>
   <ItemGroup>
