--- a/astir-lexer/astir-lexer.vcxproj.filters
+++ b/astir-lexer/astir-lexer.vcxproj.filters
@@ -51,6 +51,12 @@
     <ClCompile Include="ExampleTokenizerOutput.cpp">
       <Filter>Resource Files</Filter>
     </ClCompile>
+    <ClCompile Include="TestTokenizer01PivotOutput.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
+    <ClCompile Include="RawStream.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="ExampleTokenizer.alex">
@@ -63,6 +69,9 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="C99Tokenizer.alex">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="TestTokenizer01.alex">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
@@ -114,6 +123,9 @@
     </ClInclude>
     <ClInclude Include="IActing.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="RawStream.h">
+      <Filter>Resource Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
