--- a/astir-lexer/astir-lexer.vcxproj.filters
+++ b/astir-lexer/astir-lexer.vcxproj.filters
@@ -13,100 +13,83 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Resource Files\Tests">
+      <UniqueIdentifier>{91f52aaa-fbcd-4730-ab7b-52a1809eaee3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Resource Files\Resources">
+      <UniqueIdentifier>{ab80739d-95a4-44e3-a077-891229331752}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Generation">
+      <UniqueIdentifier>{872bc301-a809-4139-ad92-50de3f6e4af4}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Lexical Analysis">
+      <UniqueIdentifier>{0523cec0-636e-4a9d-a840-885fd0e78169}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Syntactic Analysis">
+      <UniqueIdentifier>{6b774034-db19-4267-bc8d-3405694b205e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Semantic Analysis">
+      <UniqueIdentifier>{4ae10ae4-5dc5-4b46-ae67-23fd1f9536f9}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Generation">
+      <UniqueIdentifier>{3db38239-c434-423c-a66b-e73748da54f0}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Syntactic Analysis">
+      <UniqueIdentifier>{1d1c508f-bd0a-4f80-a6ee-859f805471ce}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Semantic Analysis">
+      <UniqueIdentifier>{a592363f-fb3b-48cc-9707-ed26ac6f5a15}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Lexical Analysis">
+      <UniqueIdentifier>{847d288a-0b0f-4ca8-83ea-68bafc845e4b}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="LexicalAnalyzer.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="Tests\TestTokenizer01PivotOutput.cpp">
+      <Filter>Resource Files\Tests</Filter>
     </ClCompile>
-    <ClCompile Include="Parser.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="Resources\RawStream.cpp">
+      <Filter>Resource Files\Resources</Filter>
     </ClCompile>
-    <ClCompile Include="Token.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="NFA.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="CppGenerationVisitor.cpp">
+      <Filter>Source Files\Generation</Filter>
     </ClCompile>
     <ClCompile Include="ISyntacticEntity.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Syntactic Analysis</Filter>
     </ClCompile>
-    <ClCompile Include="SyntacticTree.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="SemanticTree.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Regex.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="LexicalAnalyzer.cpp">
+      <Filter>Source Files\Lexical Analysis</Filter>
     </ClCompile>
     <ClCompile Include="IProductionReferencable.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Semantic Analysis</Filter>
+    </ClCompile>
+    <ClCompile Include="NFA.cpp">
+      <Filter>Source Files\Semantic Analysis</Filter>
     </ClCompile>
     <ClCompile Include="NFABuilder.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Semantic Analysis</Filter>
     </ClCompile>
-    <ClCompile Include="ExampleTokenizerOutput.cpp">
-      <Filter>Resource Files</Filter>
+    <ClCompile Include="Parser.cpp">
+      <Filter>Source Files\Syntactic Analysis</Filter>
     </ClCompile>
-    <ClCompile Include="TestTokenizer01PivotOutput.cpp">
-      <Filter>Resource Files</Filter>
+    <ClCompile Include="Regex.cpp">
+      <Filter>Source Files\Syntactic Analysis</Filter>
     </ClCompile>
-    <ClCompile Include="RawStream.cpp">
-      <Filter>Resource Files</Filter>
+    <ClCompile Include="SemanticTree.cpp">
+      <Filter>Source Files\Semantic Analysis</Filter>
+    </ClCompile>
+    <ClCompile Include="SyntacticTree.cpp">
+      <Filter>Source Files\Syntactic Analysis</Filter>
+    </ClCompile>
+    <ClCompile Include="Token.cpp">
+      <Filter>Source Files\Lexical Analysis</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="ExampleTokenizer.alex">
-      <Filter>Resource Files</Filter>
-    </None>
-    <None Include="ExampleParser.apar">
-      <Filter>Resource Files</Filter>
-    </None>
-    <None Include="Grammar.astir">
-      <Filter>Resource Files</Filter>
-    </None>
-    <None Include="C99Tokenizer.alex">
-      <Filter>Resource Files</Filter>
-    </None>
-    <None Include="TestTokenizer01.alex">
-      <Filter>Resource Files</Filter>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="LexicalAnalyzer.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Parser.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Token.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Exception.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="NFA.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Regex.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="IProductionReferencable.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="SemanticTree.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="SyntacticTree.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="ISyntacticEntity.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="ISemanticEntity.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="IFileLocalizable.h">
@@ -115,17 +98,73 @@
     <ClInclude Include="FileLocation.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Resources\RawStream.h">
+      <Filter>Resource Files\Resources</Filter>
+    </ClInclude>
+    <ClInclude Include="CppGenerationVisitor.h">
+      <Filter>Header Files\Generation</Filter>
+    </ClInclude>
+    <ClInclude Include="GenerationVisitor.h">
+      <Filter>Header Files\Generation</Filter>
+    </ClInclude>
+    <ClInclude Include="IGenerationVisitable.h">
+      <Filter>Header Files\Generation</Filter>
+    </ClInclude>
+    <ClInclude Include="NFA.h">
+      <Filter>Header Files\Semantic Analysis</Filter>
+    </ClInclude>
     <ClInclude Include="NFABuilder.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\Semantic Analysis</Filter>
+    </ClInclude>
+    <ClInclude Include="Parser.h">
+      <Filter>Header Files\Syntactic Analysis</Filter>
+    </ClInclude>
+    <ClInclude Include="Regex.h">
+      <Filter>Header Files\Syntactic Analysis</Filter>
+    </ClInclude>
+    <ClInclude Include="SyntacticTree.h">
+      <Filter>Header Files\Syntactic Analysis</Filter>
+    </ClInclude>
+    <ClInclude Include="Token.h">
+      <Filter>Header Files\Lexical Analysis</Filter>
+    </ClInclude>
+    <ClInclude Include="SemanticTree.h">
+      <Filter>Header Files\Semantic Analysis</Filter>
+    </ClInclude>
+    <ClInclude Include="ISemanticEntity.h">
+      <Filter>Header Files\Semantic Analysis</Filter>
+    </ClInclude>
+    <ClInclude Include="ISyntacticEntity.h">
+      <Filter>Header Files\Syntactic Analysis</Filter>
+    </ClInclude>
+    <ClInclude Include="LexicalAnalyzer.h">
+      <Filter>Header Files\Lexical Analysis</Filter>
+    </ClInclude>
+    <ClInclude Include="IProductionReferencable.h">
+      <Filter>Header Files\Semantic Analysis</Filter>
     </ClInclude>
     <ClInclude Include="INFABuildable.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\Semantic Analysis</Filter>
     </ClInclude>
     <ClInclude Include="IActing.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\Semantic Analysis</Filter>
     </ClInclude>
-    <ClInclude Include="RawStream.h">
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Grammar.astir">
       <Filter>Resource Files</Filter>
-    </ClInclude>
+    </None>
+    <None Include="Tests\C99Tokenizer.alex">
+      <Filter>Resource Files\Tests</Filter>
+    </None>
+    <None Include="Tests\ExampleParser.apar">
+      <Filter>Resource Files\Tests</Filter>
+    </None>
+    <None Include="Tests\ExampleTokenizer.alex">
+      <Filter>Resource Files\Tests</Filter>
+    </None>
+    <None Include="Tests\TestTokenizer01.alex">
+      <Filter>Resource Files\Tests</Filter>
+    </None>
   </ItemGroup>
 </Project>
