--- a/astir-lexer/astir-lexer.vcxproj
+++ b/astir-lexer/astir-lexer.vcxproj
@@ -141,9 +141,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="CppGenerationVisitor.cpp" />
+    <ClCompile Include="Field.cpp" />
     <ClCompile Include="GenerationException.cpp" />
     <ClCompile Include="GenerationHelper.cpp" />
     <ClCompile Include="IProductionReferencable.cpp" />
+    <ClCompile Include="NFAAction.cpp" />
     <ClCompile Include="NFABuilder.cpp" />
     <ClCompile Include="ISyntacticEntity.cpp" />
     <ClCompile Include="LexicalAnalyzer.cpp" />
@@ -162,6 +164,7 @@
   <ItemGroup>
     <ClInclude Include="CppGenerationVisitor.h" />
     <ClInclude Include="Exception.h" />
+    <ClInclude Include="Field.h" />
     <ClInclude Include="FileLocation.h" />
     <ClInclude Include="GenerationException.h" />
     <ClInclude Include="GenerationHelper.h" />
@@ -170,6 +173,7 @@
     <ClInclude Include="IFileLocalizable.h" />
     <ClInclude Include="IGenerationVisitable.h" />
     <ClInclude Include="INFABuildable.h" />
+    <ClInclude Include="NFAAction.h" />
     <ClInclude Include="NFABuilder.h" />
     <ClInclude Include="ISemanticEntity.h" />
     <ClInclude Include="ISyntacticEntity.h" />
@@ -189,6 +193,7 @@
   <ItemGroup>
     <None Include="Grammar.astir" />
     <None Include="Tests\Test01\Test01.alex" />
+    <None Include="Tests\Test02\Test02.alex" />
     <None Include="Tests\Uncategorized\C99Tokenizer.alex" />
     <None Include="Tests\Uncategorized\ExampleParser.apar" />
     <None Include="Tests\Uncategorized\ExampleTokenizer.alex" />
