--- a/astir-lexer/astir-lexer.vcxproj.filters
+++ b/astir-lexer/astir-lexer.vcxproj.filters
@@ -49,6 +49,9 @@
     <Filter Include="Resource Files\Tests\Test01">
       <UniqueIdentifier>{96550b82-097c-49a9-8557-10e545b679ad}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Resource Files\Tests\Test02">
+      <UniqueIdentifier>{96c4f0f8-9f52-4a5f-b93c-fb265e3c2f0b}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -98,6 +101,12 @@
     </ClCompile>
     <ClCompile Include="GenerationException.cpp">
       <Filter>Source Files\Generation</Filter>
+    </ClCompile>
+    <ClCompile Include="Field.cpp">
+      <Filter>Source Files\Syntactic Analysis</Filter>
+    </ClCompile>
+    <ClCompile Include="NFAAction.cpp">
+      <Filter>Source Files\Semantic Analysis</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -170,6 +179,12 @@
     <ClInclude Include="GenerationHelper.h">
       <Filter>Header Files\Generation</Filter>
     </ClInclude>
+    <ClInclude Include="Field.h">
+      <Filter>Header Files\Syntactic Analysis</Filter>
+    </ClInclude>
+    <ClInclude Include="NFAAction.h">
+      <Filter>Header Files\Semantic Analysis</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Grammar.astir">
@@ -186,6 +201,9 @@
     </None>
     <None Include="Tests\Test01\Test01.alex">
       <Filter>Resource Files\Tests\Test01</Filter>
+    </None>
+    <None Include="Tests\Test02\Test02.alex">
+      <Filter>Resource Files\Tests\Test02</Filter>
     </None>
   </ItemGroup>
 </Project>
