--- a/astir-lexer/astir-lexer.vcxproj
+++ b/astir-lexer/astir-lexer.vcxproj
@@ -195,6 +195,8 @@
     <None Include="Tests\Test01\Test01.alex" />
     <None Include="Tests\Test02\Test02.alex" />
     <None Include="Tests\Test03\Test03.alex" />
+    <None Include="Tests\Test04\Test04.alex" />
+    <None Include="Tests\Test05\Test05.alex" />
     <None Include="Tests\Uncategorized\C99Tokenizer.alex" />
     <None Include="Tests\Uncategorized\ExampleParser.apar" />
     <None Include="Tests\Uncategorized\ExampleTokenizer.alex" />
