Compound capture should now work, empty regex introduced, quicktested on Test06
Have not compiled nor run Test06 code though, do that before submitting a pull request

--- a/astir-lexer/astir-lexer.vcxproj
+++ b/astir-lexer/astir-lexer.vcxproj
@@ -189,6 +189,7 @@
     <ClInclude Include="NFA.h" />
     <ClInclude Include="Parser.h" />
     <ClInclude Include="Regex.h" />
+    <ClInclude Include="RegexAction.h" />
     <ClInclude Include="Resources\Location.h" />
     <ClInclude Include="Resources\Production.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
