--- a/astir-lexer/astir-lexer.vcxproj.filters
+++ b/astir-lexer/astir-lexer.vcxproj.filters
@@ -218,6 +218,9 @@
     <ClInclude Include="Resources\Location.h">
       <Filter>Resource Files\Resources</Filter>
     </ClInclude>
+    <ClInclude Include="RegexAction.h">
+      <Filter>Header Files\Syntactic Analysis</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Grammar.astir">
